backend/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-fargate
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: backend-fargate
    spec:
      serviceAccountName: winebot-service-account
      containers:
      - name: backend
        image: 339712731794.dkr.ecr.ap-northeast-2.amazonaws.com/backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
