backend/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: backend
  name: backend-svc
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: backend-fargate
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
